--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bianjf</groupId>
+    <groupId>com.shangsw</groupId>
     <artifactId>distributed-locks-spring-boot-starter</artifactId>
     <version>1.0.0</version>
     <description>分布式锁实现</description>
@@ -63,9 +63,112 @@
         <!-- 切面 End -->
     </dependencies>
 
-    <build>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/linmeitianqing/distributed-locks-spring-boot-starter</url>
+        <connection>https://github.com/linmeitianqing/distributed-locks-spring-boot-starter.git</connection>
+        <developerConnection>https://github.com/linmeitianqing/distributed-locks-spring-boot-starter</developerConnection>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>linlei</name>
+            <email>linlixishang@163.com</email>
+            <url>https://github.com/linmeitianqing/distributed-locks-spring-boot-starter</url>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- 打包源码 Start -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 打包源码 End -->
+
+                    <!-- 生成Javadoc，关闭doclint,避免注解检查不通过 Start -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 生成Javadoc，关闭doclint,避免注解检查不通过 End -->
+
+                    <!-- Maven GPG插件用于使用以下配置对组件进行签名 Start -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- Maven GPG插件用于使用以下配置对组件进行签名 End -->
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
+    <!--<build>
         <plugins>
-            <!-- 打包源码插件 Start -->
+            &lt;!&ndash; 打包源码插件 Start &ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -82,9 +185,64 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- 打包源码插件 End -->
+            &lt;!&ndash; 打包源码插件 End &ndash;&gt;
+
+            &lt;!&ndash; 生成Javadoc，关闭doclint,避免注解检查不通过 Start &ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            &lt;!&ndash; 生成Javadoc，关闭doclint,避免注解检查不通过 End &ndash;&gt;
+
+            &lt;!&ndash; Maven GPG插件用于使用以下配置对组件进行签名 Start &ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            &lt;!&ndash; Maven GPG插件用于使用以下配置对组件进行签名 End &ndash;&gt;
+
+            &lt;!&ndash; Nexus Staging Maven插件是将组件部署到OSSRH并将其发布到Central Repository的推荐方法 Start &ndash;&gt;
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            &lt;!&ndash; Nexus Staging Maven插件是将组件部署到OSSRH并将其发布到Central Repository的推荐方法 End &ndash;&gt;
+            &lt;!&ndash; release plugin,用于发布到release仓库部署插件 Start &ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.2</version>
+            </plugin>
+            &lt;!&ndash; release plugin,用于发布到release仓库部署插件 End &ndash;&gt;
         </plugins>
-    </build>
-
-
+    </build>-->
 </project>
